--- a/app/views/projects/new.html.erb
+++ b/app/views/projects/new.html.erb
@@ -1,2 +1,13 @@
-<h1>Projects#new</h1>
-<p>Find me in app/views/projects/new.html.erb</p>
+<% provide(:title, "Create new project") %>
+<h1>Create project</h1>
+<div class="row">
+  <div class="col-md-6 col-md-offset-3">
+    <%= form_for([@user, @project]) do |f| %>
+      <%= f.label :name %>
+      <%= f.text_field :name, class: 'form-control' %>
+      <%= f.label :description %>
+      <%= f.text_field :description, class: 'form-control' %>
+      <%= f.submit 'Create project', class: 'btn btn-primary' %>
+    <% end %>
+  </div>
+</div>
